--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
@@ -56,4 +56,5 @@
     <color name="color_8c">#8c8c8c</color>
     <color name="color_EFF6FE">#EFF6FE</color>
     <color name="color_F4FBFF">#F4FBFF</color>
+    <color name="color_FFF5F5">#FFF5F5</color>
 </resources>
