--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/drawable/shape_list_lottery.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/drawable/shape_list_lottery.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#F3F2FF" />
+    <solid android:color="#FFF5F5" />
     <corners
         android:topLeftRadius="@dimen/dimen_15dp"
         android:topRightRadius="@dimen/dimen_15dp" />
