refactor(6.7.0): 观看端增加点赞，礼物等功能；发起端支持直播间彩排；回放增加房间消息回调；

--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_chat_list.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_chat_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -19,6 +20,19 @@
         android:layout_gravity="center"
         android:text="2019新潮搭配推201"
         android:textColor="@color/white"
-        android:textSize="@dimen/dimen_14dp" />
+        android:textSize="@dimen/dimen_12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/iv_gift"
+        android:layout_width="@dimen/dimen_16dp"
+        android:layout_height="@dimen/dimen_16dp"
+        android:layout_marginStart="2dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tv_text"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</android.support.constraint.ConstraintLayout>
