--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_playback_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_playback_fragment.xml
@@ -144,5 +144,9 @@
 
     </RadioGroup>
 
-
+    <com.vhall.uilibs.util.MarqueeView
+        android:id="@+id/marquee_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 </RelativeLayout>
