--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
@@ -14,23 +14,6 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
-    <!--    <Button-->
-    <!--        android:id="@+id/btn_publish"-->
-    <!--        android:layout_width="60dp"-->
-    <!--        android:layout_height="60dp"-->
-    <!--        android:layout_alignParentRight="true"-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:layout_margin="5dp"-->
-    <!--        android:background="@drawable/icon_start_bro" />-->
-
-    <!--    <com.vhall.beautifykit.control.FaceBeautyControlView-->
-    <!--        android:id="@+id/faceBeautyControlView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="@dimen/dimen_80dp"-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:layout_marginBottom="@dimen/dimen_60dp"-->
-    <!--        android:visibility="gone" />-->
-
     <LinearLayout
         android:id="@+id/ll_fuc"
         android:layout_width="match_parent"
@@ -42,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="5dp"
             android:orientation="horizontal"
             android:padding="5dp">
 
@@ -113,17 +97,57 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_publish"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentRight="true"
+    <TextView
+        android:id="@+id/tv_dress"
+        android:layout_width="61dp"
+        android:layout_height="24dp"
+        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:text="彩排中"
+        android:background="@drawable/bg_black_30_shape"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+        android:visibility="gone"
+        android:drawablePadding="3dp"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:drawableStart="@drawable/shape_white_circle"
+        android:drawableLeft="@drawable/shape_white_circle"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/dimen_45dp"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/icon_start_bro" />
+        android:layout_marginBottom="@dimen/dimen_250dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_dress_rehearsal"
+            android:layout_width="@dimen/dimen_140dp"
+            android:layout_height="@dimen/dimen_45dp"
+            android:layout_marginTop="@dimen/dimen_30dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/shape_draw_btn"
+            android:gravity="center"
+            android:text="@string/start_dress_rehearsal"
+            android:textColor="@color/color_22"
+            android:textSize="@dimen/dimen_17dp" />
+
+        <TextView
+            android:id="@+id/tv_start"
+            android:layout_width="@dimen/dimen_140dp"
+            android:layout_height="@dimen/dimen_45dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="@dimen/dimen_30dp"
+            android:background="@drawable/shape_star_btn"
+            android:gravity="center"
+            android:text="@string/start_broadcast"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_17dp" />
+    </LinearLayout>
 </RelativeLayout>
