--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
@@ -60,4 +60,5 @@
     <color name="color_F4FBFF">#F4FBFF</color>
     <color name="color_FFF5F5">#FFF5F5</color>
     <color name="color_CECED1">#CECED1</color>
+    <color name="color_f8">#f8f8f8</color>
 </resources>
