--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_survey.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_survey.xml
@@ -32,8 +32,8 @@
 
     <ImageView
         android:id="@+id/tv_cancel"
-        android:layout_width="@dimen/dimen_16dp"
-        android:layout_height="@dimen/dimen_16dp"
+        android:layout_width="12dp"
+        android:layout_height="13dp"
         android:layout_gravity="end|center_vertical"
         android:layout_margin="@dimen/dimen_16dp"
         android:background="@mipmap/icon_close"
