--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_rtc_mini_view.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_rtc_mini_view.xml
@@ -22,6 +22,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/iv_badnet"
+        android:layout_width="@dimen/dimen_60dp"
+        android:layout_height="@dimen/dimen_60dp"
+        android:visibility="gone"
+        android:background="@mipmap/vh_inav_anomaly"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
