--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/activity_watch_live.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/activity_watch_live.xml
@@ -73,6 +73,7 @@
         android:id="@+id/fl_video"
         android:layout_width="match_parent"
         android:layout_height="260dp"
+        android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
 
