--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_out_login_exit.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_out_login_exit.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/cl_root"
+    android:id="@+id/cl_dialog_out_root"
     android:background="@color/transparent">
 
     <View
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
