--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/fragment_watch_live.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/fragment_watch_live.xml
@@ -29,6 +29,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/iv_screenshot"
+        android:layout_width="@dimen/dimen_160dp"
+        android:layout_height="@dimen/dimen_90dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/iv_play"
         android:layout_width="@dimen/dimen_20dp"
         android:layout_height="@dimen/dimen_20dp"
